syntax = "proto3";

import "auth_service.proto";
import "common.proto";

package faas;

message CreateRuntimeRequest {
  string tag = 1;
  string dockerfile = 2;
  User user = 3;
}

message Runtime {
  string tag = 1;
  string registry_url = 2;
}

service RuntimeService {
  rpc CreateRuntime(CreateRuntimeRequest) returns (Runtime);
  rpc GetRuntimeTags(Empty) returns (stream Runtime);
}
